src/include/virtru_client_c.h

	/// Decrypt the remote contents(RCA) file into its original content.
	/// \param vClientPtr - The pointer to Virtru client opaque object.
    /// \param rcaLink - The link contains the information of remote content
    /// \param outFilepath - The file path of the original content after successful decryption
	/// \return VSTATUS - VSTATUS_SUCCESS on success
	DLL_PUBLIC VSTATUS VClientDecryptRCAToFile(VClientPtr vClientPtr, const char* rcaLink, const char* outFilepath);
	/// Decrypt the remote content TDF(RCA)
	/// \param vClientPtr - The pointer to Virtru client opaque object.
    /// \param rcaLink - The link contains the information of remote content
    /// \param outString - On success, it contains RCA tdf link.
	/// \return VSTATUS - VSTATUS_SUCCESS on success
	DLL_PUBLIC VSTATUS VClientDecryptRCAToString(VClientPtr vClientPtr, const char* rcaLink, char** outString);
	/// Encrypt the plain data into a TDF. In the process of encryption, a policy is
	/// associated with the TDF. The policy has a unique id which can be used to identify the TDF policy.
	/// \param vClientPtr - The pointer to Virtru client opaque object.
	/// \param vEncryptStringParamsPtr  - Encrypt string param opaque object holding all the required information for encrypt operations
	/// \param outPolicyId  - On success, it contains policy id.
	/// \param outBytesPtr  - On success, it contains the encrypted tdf data.
	/// \param outBytesLength  - On success, it is length of the encrypted tdf data.
	/// \return VSTATUS - VSTATUS_SUCCESS on success
	/// NOTE: The caller of the api should free outPolicyId buffer and outBytesPtr.
	DLL_PUBLIC VSTATUS VClientEncryptString(VClientPtr vClientPtr, VEncryptStringParamsPtr vEncryptStringParamsPtr,
		char** outPolicyId, VBytesPtr* outBytesPtr, VBytesLength* outBytesLength);
	/// Encrypt the plain data into a remote TDF. In the process of encryption, a policy is
    /// associated with the TDF. The policy has a unique id which can be used to identify the TDF policy.
	/// \param vClientPtr - The pointer to Virtru client opaque object.
	/// \param vEncryptStringParamsPtr  - Encrypt string param opaque object holding all the required information for encrypt operations
	/// \param outPolicyId  - On success, it contains policy id.
	/// \param outRcaLink  - On success, it contains RCA tdf link.
	/// \return VSTATUS - VSTATUS_SUCCESS on success
	/// NOTE: The caller of the api should free outPolicyId buffer and outRcaLink.
	DLL_PUBLIC VSTATUS VClientEncryptStringToRCA(VClientPtr vClientPtr, VEncryptStringParamsPtr vEncryptStringParamsPtr, char** outPolicyId, char** outRcaLink);
	/// Decrypt the TDF data
	/// \param vClientPtr - The pointer to Virtru client opaque object.
	/// \param inBytesPtr  - Pointer to buffer containing the TDF data.
	/// \param inBytesLength  - Length of buffer containing the TDF data.
	/// \param outBytesPtr  - On success, it contains the decrypted tdf data.
	/// \param outBytesLength  - On success, it is length of the decrypted tdf data.
	/// \return VSTATUS - VSTATUS_SUCCESS on success
	/// NOTE: The caller of the api should free outBytesPtr.
	DLL_PUBLIC VSTATUS VClientDecryptString(VClientPtr vClientPtr, VCBytesPtr inBytesPtr,
		VBytesLength inBytesLength, VBytesPtr* outBytesPtr, VBytesLength* outBytesLength);
	/// Return the policy associated with the given policy uuid.
	/// \param vClientPtr - The pointer to Virtru client opaque object.
	/// \param policyUUID - The unique policy uuid.
	/// \param vPolicyPtr - On success, it hold the ptr to the policy object.
	/// \return VSTATUS - VSTATUS_SUCCESS on success
	/// NOTE: The caller of the api should free vPolicyPtr.
	DLL_PUBLIC VSTATUS VClientFetchPolicyForUUID(VClientPtr vClientPtr, const char* policyUUID, VPolicyPtr* vPolicyPtr);
	/// Set the KAS url that will be used for tdf3 operations.
	/// \param vClientPtr - The pointer to Virtru client opaque object.
	/// \param kasUrl - The base URL for KAS communication.
	/// \return VSTATUS - VSTATUS_SUCCESS on success
	DLL_PUBLIC VSTATUS VClientSetKasUrl(VClientPtr vClientPtr, const char* kasUrl);
	/// Set the OIDC IdP url that will be used to authenticate against.
	/// \param vClientPtr - The pointer to Virtru client opaque object.
	/// \param oidcUrl - The base URL for the OIDC IdP (e.g. Keycloak) for the client to authenticate against.
	/// \return VSTATUS - VSTATUS_SUCCESS on success
	DLL_PUBLIC VSTATUS VClientSetOIDCProviderUrl(VClientPtr vClientPtr, const char* oidcUrl);
	/// DEPRECATED OIDC auth flows do not use EAS.
	///  Set the EAS url that will be used for tdf3 operations.
	/// \param vClientPtr - The pointer to Virtru client opaque object.
	/// \param easUrl - The base URL for EAS communication.
	/// \return VSTATUS - VSTATUS_SUCCESS on success
	DLL_PUBLIC VSTATUS VClientSetEasUrl(VClientPtr vClientPtr, const char* easUrl);
	/// Set the ACM url that will be used for TDF policy sync operations.
	/// \param vClientPtr - The pointer to Virtru client opaque object.
	/// \param acmUrl - The base URL for ACM communication.
	/// \return VSTATUS - VSTATUS_SUCCESS on success
	DLL_PUBLIC VSTATUS VClientSetAcmUrl(VClientPtr vClientPtr, const char* acmUrl);
	/// Set the secure reader url which will be used in html tdf.
	/// \param vClientPtr - The pointer to Virtru client opaque object.
	/// \param srUrl - The URL for Secure reader.
	/// \return VSTATUS - VSTATUS_SUCCESS on success
	DLL_PUBLIC VSTATUS VClientSetSecureReaderUrl(VClientPtr vClientPtr, const char* srUrl);