lib/virtru_sdk_bindings_generated.dart


  /// Decrypt the remote contents(RCA) file into its original content.
  /// \param vClientPtr - The pointer to Virtru client opaque object.
  /// \param rcaLink - The link contains the information of remote content
  /// \param outFilepath - The file path of the original content after successful decryption
  /// \return VSTATUS - VSTATUS_SUCCESS on success
  int VClientDecryptRCAToFile(
    VClientPtr vClientPtr,
    ffi.Pointer<ffi.Char> rcaLink,
    ffi.Pointer<ffi.Char> outFilepath,
  ) {
    return _VClientDecryptRCAToFile(
      vClientPtr,
      rcaLink,
      outFilepath,
    );
  }

  late final _VClientDecryptRCAToFilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(VClientPtr, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('VClientDecryptRCAToFile');
  late final _VClientDecryptRCAToFile = _VClientDecryptRCAToFilePtr.asFunction<
      int Function(VClientPtr, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// Decrypt the remote content TDF(RCA)
  /// \param vClientPtr - The pointer to Virtru client opaque object.
  /// \param rcaLink - The link contains the information of remote content
  /// \param outString - On success, it contains RCA tdf link.
  /// \return VSTATUS - VSTATUS_SUCCESS on success
  int VClientDecryptRCAToString(
    VClientPtr vClientPtr,
    ffi.Pointer<ffi.Char> rcaLink,
    ffi.Pointer<ffi.Pointer<ffi.Char>> outString,
  ) {
    return _VClientDecryptRCAToString(
      vClientPtr,
      rcaLink,
      outString,
    );
  }

  late final _VClientDecryptRCAToStringPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int32 Function(VClientPtr, ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'VClientDecryptRCAToString');
  late final _VClientDecryptRCAToString =
      _VClientDecryptRCAToStringPtr.asFunction<
          int Function(VClientPtr, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// Encrypt the plain data into a TDF. In the process of encryption, a policy is
  /// associated with the TDF. The policy has a unique id which can be used to identify the TDF policy.
  /// \param vClientPtr - The pointer to Virtru client opaque object.
  /// \param vEncryptStringParamsPtr  - Encrypt string param opaque object holding all the required information for encrypt operations
  /// \param outPolicyId  - On success, it contains policy id.
  /// \param outBytesPtr  - On success, it contains the encrypted tdf data.
  /// \param outBytesLength  - On success, it is length of the encrypted tdf data.
  /// \return VSTATUS - VSTATUS_SUCCESS on success
  /// NOTE: The caller of the api should free outPolicyId buffer and outBytesPtr.
  int VClientEncryptString(
    VClientPtr vClientPtr,
    VEncryptStringParamsPtr vEncryptStringParamsPtr,
    ffi.Pointer<ffi.Pointer<ffi.Char>> outPolicyId,
    ffi.Pointer<VBytesPtr> outBytesPtr,
    ffi.Pointer<VBytesLength> outBytesLength,
  ) {
    return _VClientEncryptString(
      vClientPtr,
      vEncryptStringParamsPtr,
      outPolicyId,
      outBytesPtr,
      outBytesLength,
    );
  }

  late final _VClientEncryptStringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              VClientPtr,
              VEncryptStringParamsPtr,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<VBytesPtr>,
              ffi.Pointer<VBytesLength>)>>('VClientEncryptString');
  late final _VClientEncryptString = _VClientEncryptStringPtr.asFunction<
      int Function(
          VClientPtr,
          VEncryptStringParamsPtr,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<VBytesPtr>,
          ffi.Pointer<VBytesLength>)>();

  /// Encrypt the plain data into a remote TDF. In the process of encryption, a policy is
  /// associated with the TDF. The policy has a unique id which can be used to identify the TDF policy.
  /// \param vClientPtr - The pointer to Virtru client opaque object.
  /// \param vEncryptStringParamsPtr  - Encrypt string param opaque object holding all the required information for encrypt operations
  /// \param outPolicyId  - On success, it contains policy id.
  /// \param outRcaLink  - On success, it contains RCA tdf link.
  /// \return VSTATUS - VSTATUS_SUCCESS on success
  /// NOTE: The caller of the api should free outPolicyId buffer and outRcaLink.
  int VClientEncryptStringToRCA(
    VClientPtr vClientPtr,
    VEncryptStringParamsPtr vEncryptStringParamsPtr,
    ffi.Pointer<ffi.Pointer<ffi.Char>> outPolicyId,
    ffi.Pointer<ffi.Pointer<ffi.Char>> outRcaLink,
  ) {
    return _VClientEncryptStringToRCA(
      vClientPtr,
      vEncryptStringParamsPtr,
      outPolicyId,
      outRcaLink,
    );
  }

  late final _VClientEncryptStringToRCAPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int32 Function(
                  VClientPtr,
                  VEncryptStringParamsPtr,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'VClientEncryptStringToRCA');
  late final _VClientEncryptStringToRCA =
      _VClientEncryptStringToRCAPtr.asFunction<
          int Function(
              VClientPtr,
              VEncryptStringParamsPtr,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// Decrypt the TDF data
  /// \param vClientPtr - The pointer to Virtru client opaque object.
  /// \param inBytesPtr  - Pointer to buffer containing the TDF data.
  /// \param inBytesLength  - Length of buffer containing the TDF data.
  /// \param outBytesPtr  - On success, it contains the decrypted tdf data.
  /// \param outBytesLength  - On success, it is length of the decrypted tdf data.
  /// \return VSTATUS - VSTATUS_SUCCESS on success
  /// NOTE: The caller of the api should free outBytesPtr.
  int VClientDecryptString(
    VClientPtr vClientPtr,
    VCBytesPtr inBytesPtr,
    int inBytesLength,
    ffi.Pointer<VBytesPtr> outBytesPtr,
    ffi.Pointer<VBytesLength> outBytesLength,
  ) {
    return _VClientDecryptString(
      vClientPtr,
      inBytesPtr,
      inBytesLength,
      outBytesPtr,
      outBytesLength,
    );
  }

  late final _VClientDecryptStringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              VClientPtr,
              VCBytesPtr,
              VBytesLength,
              ffi.Pointer<VBytesPtr>,
              ffi.Pointer<VBytesLength>)>>('VClientDecryptString');
  late final _VClientDecryptString = _VClientDecryptStringPtr.asFunction<
      int Function(VClientPtr, VCBytesPtr, int, ffi.Pointer<VBytesPtr>,
          ffi.Pointer<VBytesLength>)>();

  /// Return the policy associated with the given policy uuid.
  /// \param vClientPtr - The pointer to Virtru client opaque object.
  /// \param policyUUID - The unique policy uuid.
  /// \param vPolicyPtr - On success, it hold the ptr to the policy object.
  /// \return VSTATUS - VSTATUS_SUCCESS on success
  /// NOTE: The caller of the api should free vPolicyPtr.
  int VClientFetchPolicyForUUID(
    VClientPtr vClientPtr,
    ffi.Pointer<ffi.Char> policyUUID,
    ffi.Pointer<VPolicyPtr> vPolicyPtr,
  ) {
    return _VClientFetchPolicyForUUID(
      vClientPtr,
      policyUUID,
      vPolicyPtr,
    );
  }

  late final _VClientFetchPolicyForUUIDPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(VClientPtr, ffi.Pointer<ffi.Char>,
              ffi.Pointer<VPolicyPtr>)>>('VClientFetchPolicyForUUID');
  late final _VClientFetchPolicyForUUID =
      _VClientFetchPolicyForUUIDPtr.asFunction<
          int Function(
              VClientPtr, ffi.Pointer<ffi.Char>, ffi.Pointer<VPolicyPtr>)>();

  /// Set the KAS url that will be used for tdf3 operations.
  /// \param vClientPtr - The pointer to Virtru client opaque object.
  /// \param kasUrl - The base URL for KAS communication.
  /// \return VSTATUS - VSTATUS_SUCCESS on success
  int VClientSetKasUrl(
    VClientPtr vClientPtr,
    ffi.Pointer<ffi.Char> kasUrl,
  ) {
    return _VClientSetKasUrl(
      vClientPtr,
      kasUrl,
    );
  }

  late final _VClientSetKasUrlPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              VClientPtr, ffi.Pointer<ffi.Char>)>>('VClientSetKasUrl');
  late final _VClientSetKasUrl = _VClientSetKasUrlPtr.asFunction<
      int Function(VClientPtr, ffi.Pointer<ffi.Char>)>();

  /// Set the OIDC IdP url that will be used to authenticate against.
  /// \param vClientPtr - The pointer to Virtru client opaque object.
  /// \param oidcUrl - The base URL for the OIDC IdP (e.g. Keycloak) for the client to authenticate against.
  /// \return VSTATUS - VSTATUS_SUCCESS on success
  int VClientSetOIDCProviderUrl(
    VClientPtr vClientPtr,
    ffi.Pointer<ffi.Char> oidcUrl,
  ) {
    return _VClientSetOIDCProviderUrl(
      vClientPtr,
      oidcUrl,
    );
  }

  late final _VClientSetOIDCProviderUrlPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              VClientPtr, ffi.Pointer<ffi.Char>)>>('VClientSetOIDCProviderUrl');
  late final _VClientSetOIDCProviderUrl = _VClientSetOIDCProviderUrlPtr
      .asFunction<int Function(VClientPtr, ffi.Pointer<ffi.Char>)>();

  /// DEPRECATED OIDC auth flows do not use EAS.
  /// Set the EAS url that will be used for tdf3 operations.
  /// \param vClientPtr - The pointer to Virtru client opaque object.
  /// \param easUrl - The base URL for EAS communication.
  /// \return VSTATUS - VSTATUS_SUCCESS on success
  int VClientSetEasUrl(
    VClientPtr vClientPtr,
    ffi.Pointer<ffi.Char> easUrl,
  ) {
    return _VClientSetEasUrl(
      vClientPtr,
      easUrl,
    );
  }

  late final _VClientSetEasUrlPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              VClientPtr, ffi.Pointer<ffi.Char>)>>('VClientSetEasUrl');
  late final _VClientSetEasUrl = _VClientSetEasUrlPtr.asFunction<
      int Function(VClientPtr, ffi.Pointer<ffi.Char>)>();

  /// Set the ACM url that will be used for TDF policy sync operations.
  /// \param vClientPtr - The pointer to Virtru client opaque object.
  /// \param acmUrl - The base URL for ACM communication.
  /// \return VSTATUS - VSTATUS_SUCCESS on success
  int VClientSetAcmUrl(
    VClientPtr vClientPtr,
    ffi.Pointer<ffi.Char> acmUrl,
  ) {
    return _VClientSetAcmUrl(
      vClientPtr,
      acmUrl,
    );
  }

  late final _VClientSetAcmUrlPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              VClientPtr, ffi.Pointer<ffi.Char>)>>('VClientSetAcmUrl');
  late final _VClientSetAcmUrl = _VClientSetAcmUrlPtr.asFunction<
      int Function(VClientPtr, ffi.Pointer<ffi.Char>)>();

  /// Set the secure reader url which will be used in html tdf.
  /// \param vClientPtr - The pointer to Virtru client opaque object.
  /// \param srUrl - The URL for Secure reader.
  /// \return VSTATUS - VSTATUS_SUCCESS on success
  int VClientSetSecureReaderUrl(
    VClientPtr vClientPtr,
    ffi.Pointer<ffi.Char> srUrl,
  ) {
    return _VClientSetSecureReaderUrl(
      vClientPtr,
      srUrl,
    );
  }

  late final _VClientSetSecureReaderUrlPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              VClientPtr, ffi.Pointer<ffi.Char>)>>('VClientSetSecureReaderUrl');
  late final _VClientSetSecureReaderUrl = _VClientSetSecureReaderUrlPtr
      .asFunction<int Function(VClientPtr, ffi.Pointer<ffi.Char>)>();

  /// Create a new encrypt file param opaque object.
  /// NOTE: The out file path will have .html/.tdf extension appended to
  /// inFilePath based on protocol.
  /// \param inFilePath - The file on which the encryption is performed
  /// \return VEncryptFileParams opaque object.
  /// NOTE: On failure returns NULL ptr.
  VEncryptFileParamsPtr VEncryptFileParamsCreate1(
    ffi.Pointer<ffi.Char> inFilePath,
  ) {
    return _VEncryptFileParamsCreate1(
      inFilePath,
    );
  }
